--- a/2 Menu Hover/css/style.css
+++ b/2 Menu Hover/css/style.css
@@ -122,4 +122,21 @@ body {
   opacity: 0;
   visibility: hidden;
   transition: 0.5s;
+}
+.navigation.open .menuToggle::before {
+  transform: translateY(0px) rotate(45deg);
+}
+.navigation.open {
+  width: 250px;
+}
+.navigation.open .menuToggle::after {
+  transform: translateY(0px) rotate(-45deg);
+  box-shadow: 0 0 0 #333;
+}
+.navigation.open ul li.active {
+  transform: translateX(10px);
+}
+.navigation.open ul li a .text {
+  opacity: 1;
+  visibility: visible;
 }/*# sourceMappingURL=style.css.map */
