--- a/3 Toggle/css/style.css
+++ b/3 Toggle/css/style.css
@@ -34,7 +34,6 @@ body {
   background: #37444b;
   border-radius: 5px;
   opacity: 0;
-  visibility: hidden;
   transform: rotate(45deg);
   transition: 0.5s;
 }
@@ -53,4 +52,34 @@ body {
   height: 60px;
   background: #0bcf9c;
   border-radius: 30px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 0.5s;
+}
+.container .toggleBtn::before {
+  content: "+";
+  font-size: 2.5em;
+  color: #fff;
+}
+.container.active .content {
+  opacity: 1;
+  transform: scale(1);
+  transition-delay: 0.5s;
+  border-radius: 10px;
+}
+.container.active .toggleBtn {
+  bottom: -90px;
+  background: #ff5a57;
+  transform: rotate(135deg);
+}
+.container.active {
+  width: 400px;
+  height: 400px;
+  transition-delay: 0.5s;
+}
+.container.active::before {
+  opacity: 1;
+  transition-delay: 0.5s;
 }/*# sourceMappingURL=style.css.map */
