--- a/3 Toggle/css/style.scss
+++ b/3 Toggle/css/style.scss
@@ -26,7 +26,7 @@ body{
     border-radius: 25px;
     transition: 0.5s;
     &::before{
-        content: '';
+        content: "";
         position: absolute;
         bottom: -15px;
         width: 40px;
@@ -34,7 +34,6 @@ body{
         background: #37444b;
         border-radius: 5px;
         opacity: 0;
-        visibility: hidden;
         transform: rotate(45deg);
         transition: 0.5s;
     }
@@ -53,5 +52,38 @@ body{
         height: 60px;
         background: #0bcf9c;
         border-radius: 30px;
+        cursor: pointer;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        transition: 0.5s;
+        &::before{
+            content: '+';
+            font-size: 2.5em;
+            color: #fff;
+        }
+    }
+
+    &.active .content{
+        opacity: 1;
+        transform: scale(1);
+        transition-delay: 0.5s;
+        border-radius: 10px;
+
+
+    }
+    &.active .toggleBtn{
+        bottom: -90px;
+        background:#ff5a57;
+        transform: rotate(135deg);
+    }
+    &.active{
+        &::before{
+            opacity: 1;
+            transition-delay: 0.5s;
+        }
+        width: 400px;
+        height: 400px;
+        transition-delay: 0.5s;
     }
 }
