--- a/4 Dark theme/css/style.css
+++ b/4 Dark theme/css/style.css
@@ -24,6 +24,7 @@ body.active {
   height: 160px;
   border-radius: 160px;
   background: #222;
+  transition: 0.5s;
   box-shadow: inset 0 8px 60px rgba(0, 0, 0, 0.1), inset 0 8px 8px rgba(0, 0, 0, 0.1), inset 0 -4px 4px rgba(0, 0, 0, 0.1);
 }
 #toggle .indicator {
