--- a/4 Dark theme/css/style.scss
+++ b/4 Dark theme/css/style.scss
@@ -25,6 +25,7 @@ body{
     // border: 1px solid white;
     border-radius: 160px;
     background: #222;
+    transition: 0.5s;
     box-shadow: inset 0 8px 60px rgba(0,0,0,0.1),
         inset 0 8px 8px rgba(0,0,0,0.1),
         inset 0 -4px 4px rgba(0,0,0,0.1);
