--- a/6 OnMouseOver/css/style.css
+++ b/6 OnMouseOver/css/style.css
@@ -1,1 +1,133 @@
-/*# sourceMappingURL=style.css.map */
+@import "https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap";
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background: url(../img/bg.jpg);
+  background-size: cover;
+}
+
+.container {
+  border: 1px solid black;
+  position: relative;
+  width: 400px;
+  height: 400px;
+}
+.container .thum {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 1;
+}
+.container .thum li {
+  list-style: none;
+  width: 100px;
+  height: 100px;
+  margin: 10px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(255, 255, 255, 0.2);
+  box-shadow: 0 15px 25px rgba(0, 0, 0, 0.05);
+  border-radius: 20px;
+  -webkit-backdrop-filter: blur(4px);
+          backdrop-filter: blur(4px);
+  border: 1px solid rgba(255, 255, 255, 0.25);
+  border-top: 1px solid rgba(255, 255, 255, 0.5);
+  border-left: 1px solid rgba(255, 255, 255, 0.5);
+}
+.container .thum li img {
+  width: 80%;
+  transition: 0.5s;
+}
+.container .thum li img:hover {
+  cursor: pointer;
+  transform: rotate(-35deg);
+}
+.container .imgBox {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 60px 20px;
+  width: 350px;
+  height: 100%;
+  padding-left: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
+  background: rgba(255, 255, 255, 0.2);
+  box-shadow: 0 15px 25px rgba(0, 0, 0, 0.05);
+  border-radius: 20px;
+  -webkit-backdrop-filter: blur(4px);
+          backdrop-filter: blur(4px);
+  border: 1px solid rgba(255, 255, 255, 0.25);
+  border-top: 1px solid rgba(255, 255, 255, 0.5);
+  border-left: 1px solid rgba(255, 255, 255, 0.5);
+}
+.container .imgBox h2 {
+  color: #fff;
+  letter-spacing: 1px;
+}
+.container .imgBox img {
+  width: 80%;
+  transition: all 0.25s;
+}
+.container .imgBox img:hover {
+  transform: scale(1.2) translateX(20px) rotate(-15deg);
+}
+.container .imgBox .size {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+  width: 70%;
+}
+.container .imgBox .size span {
+  color: #fff;
+  font-size: 1.2rem;
+  letter-spacing: 5px;
+  margin-right: 5px;
+}
+.container .imgBox .size li {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #1e6b7b;
+  background: #fff;
+  border-radius: 4px;
+  font-weight: 700;
+  margin: 5px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  transition: 0.5s;
+}
+.container .imgBox .size li:hover {
+  transform: scale(1.3) translateY(-10px);
+}
+.container .imgBox .btn {
+  text-decoration: none;
+  position: absolute;
+  bottom: -30px;
+  background: #fff;
+  box-shadow: 0 15px 25px rgba(0, 0, 0, 0.1);
+  border-radius: 30px;
+  display: inline-block;
+  padding: 15px 30px;
+  color: #1e6b7b;
+  transition: 0.5s;
+}
+.container .imgBox .btn:hover {
+  letter-spacing: 2px;
+}/*# sourceMappingURL=style.css.map */
