--- a/7 Cambio de color/css/style.scss
+++ b/7 Cambio de color/css/style.scss
@@ -15,10 +15,13 @@
     height: 100vh;
     display: flex;
     background: #111;
-    // visibility: hidden;
-    opacity: 1;
+    visibility: hidden;
+    opacity: 0;
     transition: 0.2s;
-
+    &.active{
+        visibility: visible;
+        opacity: 1;
+    }
 }
 
 .navArea
@@ -117,6 +120,13 @@
     z-index: 10000;
     cursor: pointer;
     border-radius: 8px;
+    &.active{
+        background:#000 url('../images/close.png') no-repeat;
+        background-size: 25px;
+        background-position: center;
+        filter: invert(1);
+        
+    }
 }
 
 
