--- a/8 Slider video/css/style.scss
+++ b/8 Slider video/css/style.scss
@@ -9,4 +9,87 @@
 section{
     background: #111;
     min-height: 100vh;
+    .banner-video{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        video{
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            opacity: 0;
+            &.active{
+                opacity: 1;
+            }
+        }
+    }
+    .container{
+        position: relative;
+        padding: 0 100px;
+        display: flex;
+        justify-content: center;
+        align-tracks: center;
+        z-index: 1;
+        min-height: 100vh;
+        &::before{
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 50%;
+            height: 100%;
+            backdrop-filter: blur(10px);
+            box-shadow: 10px 0 15px rbga(0,0,0,0.05);
+        }
+        header{
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 30px 100px;
+            .logo{
+                font-weight: 700;
+                text-transform: uppercase;
+                color: #fff;
+                font-size: 1.8em;
+                text-decoration: none;
+            }
+            ul{
+                position: relative;
+                display: flex;
+                list-style: none;
+                li{
+                    margin: 0 20px;            
+                    a{
+                        position: relative;
+                        color: #fff;
+                        text-decoration: none;
+                        font-size: 18px;
+                        padding: 4px 10px;
+                        &:hover{
+                            background: #fff;
+                            color: #111;
+                        }
+                        &.active{
+                            background: #fff;
+                            color: #111;
+                        }
+
+                    }
+                }
+            }
+        }
+        .content{
+        }
+
+    }
 }
+
