--- a/8 Slider video/css/style.css
+++ b/8 Slider video/css/style.css
@@ -34,9 +34,8 @@ section .container {
   position: relative;
   padding: 0 100px;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-tracks: center;
-  z-index: 1;
   min-height: 100vh;
 }
 section .container::before {
@@ -70,10 +69,10 @@ section .container header .logo {
 section .container header ul {
   position: relative;
   display: flex;
-  list-style: none;
 }
 section .container header ul li {
   margin: 0 20px;
+  list-style: none;
 }
 section .container header ul li a {
   position: relative;
@@ -89,4 +88,120 @@ section .container header ul li a:hover {
 section .container header ul li a.active {
   background: #fff;
   color: #111;
+}
+section .container header .menu-icon {
+  display: none;
+}
+section .container .content {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+section .container .content .banner-text {
+  position: relative;
+  max-width: 700px;
+}
+section .container .content .banner-text div {
+  display: none;
+  transition: 0.5s ease-in-out;
+}
+section .container .content .banner-text div h2 {
+  color: #fff;
+  font-size: 6em;
+  line-height: 1em;
+  font-weight: 700;
+}
+section .container .content .banner-text div p {
+  color: #fff;
+  font-size: 18px;
+  margin: 20px 0;
+}
+section .container .content .banner-text div.active {
+  display: initial;
+}
+section .container .controls {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  display: flex;
+  list-style: none;
+}
+section .container .controls li {
+  background: #fff;
+  width: 80px;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+section .container .controls li:hover {
+  background: #f5f5ff;
+}
+
+@media (max-width: 991px) {
+  section .container {
+    padding: 20px;
+  }
+  section .container::before {
+    width: 100%;
+  }
+  section .container header {
+    padding: 10px 20px;
+  }
+  section .container header ul {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background: #fff;
+    z-index: 1000;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  section .container header ul li {
+    text-align: center;
+    margin: 10px;
+  }
+  section .container header ul li a {
+    color: #333;
+    font-size: 1.5em;
+  }
+  section .container header ul li a:hover {
+    color: #f00 !important;
+  }
+  section .container header .menu-icon {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 50px;
+    height: 50px;
+    display: initial;
+    z-index: 1000;
+    background: #fff url(../img/menu.png) no-repeat center;
+    background-size: 30px;
+    cursor: pointer;
+  }
+  section .container header .menu-icon.active {
+    background: #fff url(../img/close.png) no-repeat center;
+    background-size: 25px;
+    cursor: pointer;
+  }
+  section .container header.active ul {
+    display: flex;
+  }
+  section .container .content .banner-text {
+    max-width: 100%;
+    text-align: center;
+  }
+  section .container .content .banner-text div h2 {
+    font-size: 3em;
+  }
+  section .container .controls li {
+    width: 60px;
+    height: 60px;
+  }
 }/*# sourceMappingURL=style.css.map */
