--- a/9 Mouse/style.css
+++ b/9 Mouse/style.css
@@ -7,11 +7,11 @@ body{
     width: 100vw;
     height: 100vh;
     background: #f9cb3a;
-    cursor: url(cursor3.svg), auto;
+    cursor: url(cursor.svg), auto;
     transition: 0.5s;
 }
 
-img{
+svg{
     width: 200px;
 }
 
