Final funcionalidad javascript y animaciones css

--- a/14 Login translate/css/style.css
+++ b/14 Login translate/css/style.css
@@ -233,22 +233,24 @@ form.sign-in-form {
     
 }
 
-/*animaciones*/
+/*animaciones van antes de los @media*/
 
-.container.sign-up-mode:before {
+ .container.sign-up-mode:before {
     transform: translate(100%, -50%);
     right: 52%;
   }
-  
+
   .container.sign-up-mode .left-panel .image,
   .container.sign-up-mode .left-panel .content {
     transform: translateX(-800px);
   }
-  
+
+
   .container.sign-up-mode .signin-signup {
     left: 25%;
   }
-  
+
+
   .container.sign-up-mode form.sign-up-form {
     opacity: 1;
     z-index: 2;
@@ -258,16 +260,20 @@ form.sign-in-form {
     opacity: 0;
     z-index: 1;
   }
+
   .container.sign-up-mode .right-panel .image,
   .container.sign-up-mode .right-panel .content {
     transform: translateX(0%);
   }
+
   .container.sign-up-mode .left-panel {
     pointer-events: none;
   }
+
   .container.sign-up-mode .right-panel {
     pointer-events: all;
   }
+  
 @media (max-width: 870px) {
     .container {
         min-height: 800px;
