--- a/15 Pokedex/css/style.scss
+++ b/15 Pokedex/css/style.scss
@@ -1,6 +1,6 @@
 @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900&display=swap";
 
-* {
+* ,*::after,*::before{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -23,8 +23,96 @@ body{
     height: 100%;
     width: 100%;
     flex-wrap: wrap;
-    &>*{
+    & > *{
         margin: .2em .9em;
     }
 
 }
+
+[type="radio"]:checked,
+[type="radio"]:not(:checked){
+    position: absolute;
+    left: -9999px;
+}
+
+[type="radio"]:checked+label,
+[type="radio"]:not(:checked)+label{
+    position: relative;
+    padding-left: 12px;
+    padding-right: 12px;
+    cursor: pointer;
+    line-height: 30px;
+    font-size: 12px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-weight: 400;
+    color: #fff;
+    margin-right: 10px;
+    margin-left: 10px;
+
+    -webkit-transition: all 0.2s ease;
+    transition: all 0.2s ease;
+}
+
+[type="radio"]:checked:hover + label:before,
+[type="radio"]:not(:checked):hover + label:before,
+[type="radio"]:checked+label:hover + label:after,
+[type="radio"]:not(:checked):hover + label:after{
+    opacity: 0.7;
+}
+
+[type="radio"]:checked + label:before,
+[type="radio"]:not(:checked) + label:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 30px;
+  border-radius: 3px;
+  background-color: transparent;
+
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+}
+
+
+[type="radio"]:checked + label:after,
+[type="radio"]:not(:checked) + label:after {
+  content: '';
+  width: calc(100% - 8px);
+  border-radius: 2px;
+  height: 22px;
+  background-color: #e74c3c;
+  position: absolute;
+  top: 4px;
+  left: 4px;
+
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+}
+
+[type="radio"]:not(:checked) + label:after {
+  opacity: 0;
+  -webkit-transform: scale(0);
+  transform: scale(0);
+}
+
+[type="radio"]:checked + label:after{
+    opacity: .6;
+    -webkit-transform: scale(1);
+    transform: scale(1);
+}
+
+.radio-gen:checked + label:before,
+.radio-gen:not(:checked) + label:before {
+    border:3px solid #e74c3c;
+}
+
+.radio-gen:checked + label:after,
+.radio-gen:not(:checked) + label:after {
+    background: #e74c3c;
+}
+
+
+
