--- a/15 Pokedex/css/style.css
+++ b/15 Pokedex/css/style.css
@@ -1,5 +1,5 @@
 @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900&display=swap";
-*, *::after, *::before {
+*, *:after, *:before {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -103,4 +103,45 @@ body {
 .radio-gen:checked + label:after,
 .radio-gen:not(:checked) + label:after {
   background: #e74c3c;
+}
+
+.container {
+  padding: 1em;
+  width: 100vw;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+.container li {
+  font-weight: 700;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  list-style: none;
+  width: 200px;
+  height: 200px;
+  color: #37393b;
+}
+.container li:hover {
+  border: 6px solid #f67c55;
+  border-radius: 15px;
+  background: linear-gradient(45deg, #f67c55, #f67c55);
+  background: linear-gradient(45deg, #f23b00, #fcd3c6);
+  color: #fff;
+}
+.container li .pokeimage {
+  width: 100px;
+}
+.container li .pokeimage:hover {
+  transform: scale(1.2);
+  transition: 0.5s;
+  margin: 18px;
+  background-color: white;
+  box-shadow: 20px 20px 40px #FAF3C4;
+  background-color: white;
+  border-radius: 50%;
+  padding: 20px;
 }/*# sourceMappingURL=style.css.map */
