--- a/20 Sidebar/assets/styles/styles.css
+++ b/20 Sidebar/assets/styles/styles.css
@@ -1,1 +1,115 @@
-/*# sourceMappingURL=styles.css.map */
+@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900&display=swap";
+:root {
+  --header-height: 3.5rem;
+  --nav-width: 219px;
+  /*Colores*/
+  --first-color: #6923d0;
+  --first-color: rgb(28, 203, 107);
+  --first-color-light: #1d1b1f;
+  --title-color: #19181b;
+  --text-color: #58555e;
+  --text-color-light: #a5a1aa;
+  --body-color: #181718;
+  --container-color: #0b0b0b;
+  /*fonts*/
+  --body-font: "Poppins", sans-serif;
+  --normal-font-size: 0.938rem;
+  --small-font-size: 0.75rem;
+  --smaller-font-size: 0.75rem;
+  --font-medium: 500;
+  --font-semi-bold: 600;
+  --z-fixed: 100;
+}
+
+@media screen and (min-width: 1024px) {
+  :root {
+    --normal-font-size: 1rem;
+    --small-font-size: 0.875rem;
+    --smaller-font-size: 0.813rem;
+  }
+}
+/*Formateo de pagina*/
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  margin: var(--header-height);
+  padding: 1rem 1rem 0;
+  font-family: var(--body-font);
+  font-size: var(--normal-font-size);
+  background: var(--body-color);
+  color: var(--text-color);
+}
+
+h3 {
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+/*HEADER*/
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: var(--container-color);
+  box-shadow: 0 1p 0 rgba(22, 8, 43, 0.1);
+  padding: 0 1rem;
+  z-index: var(--z-fixed);
+}
+.header__container {
+  display: flex;
+  align-items: center;
+  height: var(--header-height);
+  justify-content: space-between;
+}
+.header__img {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.header__logo {
+  color: var(--title-color);
+  font-weight: var(--font-medium);
+  display: none;
+}
+.header__search {
+  display: flex;
+  padding: 0.4rem 0.75rem;
+  background: var(--first-color-light);
+  border-radius: 0.25rem;
+}
+.header__input {
+  width: 100%;
+  border: none;
+  outline: none;
+  background: var(--first-color-light);
+}
+.header__input::-moz-placeholder {
+  font-family: var(--body-font);
+  color: var(--text-color);
+}
+.header__input::placeholder {
+  font-family: var(--body-font);
+  color: var(--text-color);
+}
+.header__icon, .header__toggle {
+  font-size: 1.2rem;
+}
+.header__toggle {
+  color: white;
+  cursor: pointer;
+}/*# sourceMappingURL=styles.css.map */
