--- a/20 Sidebar/assets/styles/styles.scss
+++ b/20 Sidebar/assets/styles/styles.scss
@@ -212,6 +212,14 @@ img{
 
     }
 }
+/*clases agregadas con JS*/
+.show-menu{
+    left: 0;
+}
+.active{
+    color: var(--first-color);
+}
+
 /*Media Queries*/
 @media screen and (max-width: 320px) {
     .header{
