--- a/21 Pinocho parallax/assets/css/styles.scss
+++ b/21 Pinocho parallax/assets/css/styles.scss
@@ -6,6 +6,7 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
+html, body{  height: 100%;}
 
 body {
   display: flex;
@@ -17,6 +18,7 @@ body {
   perspective: 1800px;
   text-align: center;
   margin: 0 20px;
+
 }
 
 .cards {
@@ -62,6 +64,9 @@ body {
     &:not(:last-child) {
       margin-right: 30px;
     }
+    &:last-child{
+      margin-top: 30px;
+    }
     .card__bg {
         position: absolute;
         top: -50px;
@@ -70,7 +75,8 @@ body {
         right: -50px;
         transform-origin: 50% 50%;
         transform: translateZ(-50px);
-        z-index: -1;
+        z-index: 0;
+        transition: all .3s;
     }
 
     .card__img {
