--- a/23 Card MouseMove/styles/style.css
+++ b/23 Card MouseMove/styles/style.css
@@ -121,3 +121,25 @@ ul {
     }
 
 }
+
+.overlay{
+    position: absolute;
+    inset: 0;
+    pointer-events: none;
+    user-select: none;
+    opacity: var(--opacity, 0);
+    mask: radial-gradient(
+        25rem 25rem at var(--x) var(--y), #000 1%, transparent 50%
+    );
+    .card{
+        background: hsla(var(--hsl), 0.25);
+        border-color: hsla(var(--hsl), 1);
+        box-shadow: 0 0 0 1px inset hsla(var(--hsl));
+    }
+    .cta{
+        display: block;
+        width: 100%;
+        background: hsl(var(--hsl));
+        box-shadow: 0 0 0 1px hsl(var(--hsl));
+    }
+}
